--- a/package.json
+++ b/package.json
@@ -3,18 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 9001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 9001",
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "bcrypt": "^5.0.1",
+    "chart.js": "^3.7.1",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.4",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next-auth": "^4.3.4",
+    "react-chartjs-2": "^4.1.0",
+    "react-dom": "18.1.0",
+    "swiper": "^8.1.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.13",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.0.24"
   }
 }
